cleaned cde for RegistrationTests